--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
@@ -20,6 +21,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1",
-    "oracledb": "^6.4.0"
+    "oracledb": "^6.4.0",
+    "tsup": "^8.0.2"
   }
 }
